fixed face covering image link
Signed-off-by: Jawaid Hakim <himalayahall@gmail.com>

--- a/presentation/Slideshow.Rmd
+++ b/presentation/Slideshow.Rmd
@@ -32,9 +32,9 @@ library(knitr)
 
 ![OWID Comprehensive Timeseries](https://github.com/himalayahall/DATA607-FINALPROJECT/blob/master/presentation/images/COVIDS-DAILY-OWID.PNG?raw=true)
 
-# Data Acquisition - [Our World In Data](https://ourworldindata.org/covid-face-coverings)
+# Data Acquisition - [Face Coverings](https://ourworldindata.org/covid-face-coverings)
 
-![OWID Comprehensive Timeseries](https://github.com/himalayahall/DATA607-FINALPROJECT/blob/master/presentation/images/FACE-DAILY-OWID.PNG?raw=true)
+![](https://github.com/himalayahall/DATA607-FINALPROJECT/blob/master/presentation/images/FACE-DAILY-OWID.png?raw=true)
 
 # Data Wrangling - Strategy
 
